# MathematicalOperationFinder

./: CInterface.cpp  CInterface.h  CMakeLists.txt  CNode.cpp  CNode.h  CTree.cpp  CTree.h  GeneticTree.cpp  GeneticTree.h  dane.txt  main.cpp
